Add pre/post backup/restore scripts for the client. It doesn't work for Windows yet.

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -44,6 +44,7 @@ FILED_OBJS = \
 	$(OBJDIR)/counter.o \
 	$(OBJDIR)/find.o \
 	$(OBJDIR)/find_one.o \
+	$(OBJDIR)/forkchild.o \
 	$(OBJDIR)/list_client.o \
 	$(OBJDIR)/handy.o \
 	$(OBJDIR)/lock.o \
