--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -27,3 +27,15 @@ ssl_cert_password = password
 
 # Common name in the certificate that the server gives us
 ssl_peer_cn = grkeserver
+
+# Example syntax for pre/post scripts
+#backup_script_pre=/path/to/a/script
+#backup_script_post=/path/to/a/script
+#restore_script_pre=/path/to/a/script
+#restore_script_post=/path/to/a/script
+
+# By default, burp backups up the fifos themselves, rather than reading from
+# them. These two options let you choose a particular fifo to read, or read
+# from all fifos.
+#read_fifo=/path/to/a/fifo
+#read_all_fifos=0
