--- a/src/win32/installer/ConfigPageBP.ini
+++ b/src/win32/installer/ConfigPageBP.ini
@@ -1,5 +1,5 @@
 [Settings]
-NumFields=9
+NumFields=12
 
 [Field 1]
 Type=Label
@@ -30,45 +30,69 @@ Type=Label
 Text=Client name:
 Left=0
 Right=45
-Top=45
-Bottom=55
+Top=40
+Bottom=50
 
 [Field 5]
 Type=Text
 Text=Client name
 Left=50
 Right=-1
-Top=45
-Bottom=55
+Top=40
+Bottom=50
 
 [Field 6]
 Type=Label
 Text=Enter the name that the server will call this client.
 Left=0
 Right=-1
-Top=60
-Bottom=70
+Top=55
+Bottom=65
 
 [Field 7]
 Type=Label
 Text=Password:
 Left=0
 Right=45
-Top=90
-Bottom=100
+Top=78
+Bottom=88
 
 [Field 8]
 Type=Text
 Text=Password
 Left=50
 Right=-1
-Top=90
-Bottom=100
+Top=78
+Bottom=88
 
 [Field 9]
 Type=Label
-Text=Enter the password that this client will give to the server..
+Text=Enter the password that this client will give to the server.
 Left=0
 Right=-1
-Top=105
-Bottom=115
+Top=94
+Bottom=104
+
+[Field 10]
+Type=Label
+Text=Poll every:
+Left=0
+Right=45
+Top=110
+Bottom=120
+
+[Field 11]
+Type=Text
+Text=Poll every
+Left=50
+Right=100
+Top=110
+Bottom=120
+
+[Field 12]
+Type=Label
+Text=Enter the poll frequency in minutes.
+Left=0
+Right=-1
+Top=125
+Bottom=135
