Make 'struct backupdir' more generic (now called 'struct strlist') and put it in its own source file.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -56,6 +56,7 @@ SVRSRCS =	asyncio.c \
 		ssl.c \
 		status_client.c \
 		status_server.c \
+		strlist.c \
 		zlibio.c \
 
 SVROBJS = $(SVRSRCS:.c=.o)
