Options to run as a different user or group.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -13,6 +13,10 @@ include = /home
 #include = /home/graham/xdir
 #exclude = /home/graham/testdir/libr
 
+# Run as different user/group.
+# user=graham
+# group=nogroup
+
 cross_filesystem=/home
 cross_all_filesystems=0
 
