--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -11,6 +11,10 @@ hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
 
+# Run as different user/group.
+# user=graham
+# group=nogroup
+
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 
