Add ssl_key option from Patrick Koppen. Make ssl_cert_password a synonym of ssl_key_password (or vice versa).

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -26,6 +26,9 @@ ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 # Client SSL certificate
 ssl_cert = /etc/burp/ssl_cert-client.pem
 
+# Client SSL key
+#ssl_key = /etc/burp/ssl_cert-client.key
+
 # SSL cert password
 ssl_cert_password = password
 
