--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -21,6 +21,9 @@ ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 # Server SSL certificate
 ssl_cert = /etc/burp/ssl_cert-server.pem
 
+# Server SSL key
+#ssl_key = /etc/burp/ssl_cert-server.key
+
 # SSL certificate password
 ssl_cert_password = password
 
