Change ssl_cert_password to ssl_key_password in the example configs.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -24,8 +24,8 @@ ssl_cert = /etc/burp/ssl_cert-server.pem
 # Server SSL key
 #ssl_key = /etc/burp/ssl_cert-server.key
 
-# SSL certificate password
-ssl_cert_password = password
+# SSL key password
+ssl_key_password = password
 
 # Server DH file.
 ssl_dhfile = /etc/burp/dhfile.pem
