--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -29,8 +29,8 @@ ssl_cert = /etc/burp/ssl_cert-client.pem
 # Client SSL key
 #ssl_key = /etc/burp/ssl_cert-client.key
 
-# SSL cert password
-ssl_cert_password = password
+# SSL key password
+ssl_key_password = password
 
 # Common name in the certificate that the server gives us
 ssl_peer_cn = grkeserver
