Add option to set server umask.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -10,6 +10,7 @@ keep = 5
 hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
+umask = 0022
 
 # Run as different user/group.
 # user=graham
