Added option to specify the clientconfdir password in passwd format.

--- a/autoconf/Make.common.in
+++ b/autoconf/Make.common.in
@@ -93,6 +93,7 @@ PYTHON_INC = @PYTHON_INCDIR@
 OPENSSL_LIBS = @OPENSSL_LIBS@
 RSYNC_LIBS = @RSYNC_LIBS@
 NCURSES_LIBS = @NCURSES_LIBS@
+CRYPT_LIBS = @CRYPT_LIBS@
 ZLIBS = @ZLIBS@
 BDB_CPPFLAGS = @BDB_CPPFLAGS@
 BDB_LIBS = @BDB_LIBS@
