--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1600,6 +1600,7 @@ Configuration on `date`:
    zlib:			${have_zlib}
    librsync:			${have_librsync}
    acl:				${have_acl}
+   xattr:			${have_xattr}
 
   " > config.out
 
