Add 'nobackup=' option.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -12,6 +12,9 @@ include = /home
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
 #include = /home/graham/xdir
 #exclude = /home/graham/testdir/libr
+# The content of directories containing a filesystem entry named like this
+# will not be backed up.
+nobackup = .nobackup
 
 # Run as different user/group.
 # user=graham
