--- a/configs/client/cron.example
+++ b/configs/client/cron.example
@@ -3,4 +3,4 @@ MAILTO=
 # will decide whether it is yet time to do a backup or not.
 # It might be a good idea to change the numbers below for different clients,
 # in order to spread the load a bit.
-7,27,47 * * * *	root	/usr/sbin/burp -a t
+7,27,47 * * * *	root	/sbin/burp -a t
