--- a/configs/server/cron.example
+++ b/configs/server/cron.example
@@ -3,4 +3,4 @@ MAILTO=""
 # summary at 6 every morning.
 # If your server is using a different config file to /etc/burp/burp-server.conf,
 # change the first argument to its path.
-#6 * * * *       root    /etc/burp/send_summary /etc/burp/burp-server.conf youremail@example.com "Daily backup summary"
+0 6 * * *       root    /etc/burp/send_summary /etc/burp/burp-server.conf youremail@example.com "Daily backup summary"
