Add simple 'exclude_ext=' feature.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -12,6 +12,9 @@ include = /home
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
 #include = /home/graham/xdir
 #exclude = /home/graham/testdir/libr
+# Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
+#exclude_ext = vdi
+#exclude_ext = vmdk
 # The content of directories containing a filesystem entry named like this
 # will not be backed up.
 nobackup = .nobackup
