Option to prune down the number of backups kept back into the past. For example, keep=7 keep=4 keep=6 (on separate lines) will keep 7 daily backups, 4 weekly backups (7x4=28), and 6 multiples of 4 weeks (7x4x6=168). You can have as many 'keep' lines as you like.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -6,11 +6,17 @@ status_port = 4972
 directory = /var/spool/burp
 clientconfdir = /etc/burp/clientconfdir
 lockfile = /var/lock/burp/server.lockfile
-keep = 5
 hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
 umask = 0022
+
+# You can have as many 'keep' lines as you like.
+# Setting 7, 4, 6 will keep 7 daily backups, 4 weekly, and 6 four-weekly
+# backups.
+keep = 7
+# keep = 4
+# keep = 6
 
 # Run as different user/group.
 # user=graham
