Network send rate-limiting feature (both client and server). Change pidfile paths to /var/run/burp instead of /var/lock/burp.

--- a/Makefile.in
+++ b/Makefile.in
@@ -90,7 +90,7 @@ installdirs:
 	$(MKDIR) $(DESTDIR)$(sbindir)
 	$(MKDIR) $(DESTDIR)$(sysconfdir)
 	$(MKDIR) $(DESTDIR)$(sysconfdir)/clientconfdir
-	$(MKDIR) $(DESTDIR)/var/lock/burp
+	$(MKDIR) $(DESTDIR)/var/run/burp
 	$(MKDIR) $(DESTDIR)/var/spool/burp
 
 gnomedirs:
