--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -5,7 +5,9 @@ port = 4971
 server = 127.0.0.1
 password = abcdefgh
 cname = testclient
-lockfile = /var/lock/burp/client.lockfile
+pidfile = /var/run/burp/client.pid
+# Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
+# ratelimit = 1.5
 
 include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
