--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -5,11 +5,13 @@ port = 4971
 status_port = 4972
 directory = /var/spool/burp
 clientconfdir = /etc/burp/clientconfdir
-lockfile = /var/lock/burp/server.lockfile
+pidfile = /var/run/burp/server.pid
 hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
 umask = 0022
+# Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
+# ratelimit = 1.5
 
 # You can have as many 'keep' lines as you like.
 # Setting 7, 4, 6 will keep 7 daily backups, 4 weekly, and 6 four-weekly
