Add option to send success notifications only if there were warnings.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -55,6 +55,9 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #notify_success_arg = To: youremail@example.com
 #notify_success_arg = From: burp
 #notify_success_arg = Subject: backup succeeded:
+# Uncomment the following to have success notifications only if there were
+# warnings.
+#notify_success_warnings_only = 1
 
 # Uncomment the following for email notifications of backups that failed.
 #notify_failure_script = /etc/burp/notify_script
