Add a network_timeout parameter. Default is 7200 seconds (2 hours).

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -8,6 +8,8 @@ cname = testclient
 pidfile = /var/run/burp/client.pid
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
+# Network timeout defaults to 7200 seconds (2 hours).
+# network_timeout = 7200
 
 include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
