--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -12,6 +12,8 @@ max_children = 5
 umask = 0022
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
+# Network timeout defaults to 7200 seconds (2 hours).
+# network_timeout = 7200
 
 # You can have as many 'keep' lines as you like.
 # Setting 7, 4, 6 will keep 7 daily backups, 4 weekly, and 6 four-weekly
