--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -129,10 +129,13 @@ AC_ARG_ENABLE(static,
 )
 
 STATIC=
+STATIC_DEDUP=
 if test x$support_static = xyes; then
    STATIC="static-burp"
+   STATIC_DEDUP="static-bedup"
 fi
 AC_SUBST(STATIC)
+AC_SUBST(STATIC_DEDUP)
 
 
 dnl --------------------------------------------------
