--- a/configs/server/cron.example
+++ b/configs/server/cron.example
@@ -4,3 +4,8 @@ MAILTO=""
 # If your server is using a different config file to /etc/burp/burp-server.conf,
 # change the first argument to its path.
 0 6 * * *       root    /etc/burp/send_summary /etc/burp/burp-server.conf youremail@example.com "Daily backup summary"
+
+# The following will run file deduplication over all client storages every
+# Saturday at 8 in the morning. Again, if your server is using a different
+# config file to /etc/burp/burp-server.conf, change that argument.
+0 8 * * 6	root    /sbin/bedup -l -c /etc/burp/burp-server.conf
