--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -19,7 +19,8 @@ include = /home
 # Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
 #exclude_ext = vdi
 #exclude_ext = vmdk
-# Exclude files larger than the given size. Default is 0, which means no limit.
+# Exclude files based on size. Defaults are 0, which means no limit.
+#min_file_size = 0 Mb
 #max_file_size = 0 Mb
 # The content of directories containing a filesystem entry named like this
 # will not be backed up.
