Add server-side pre/post scripts.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -24,6 +24,7 @@ SVRSRCS =	acl.c \
 		attribs.c \
 		auth_server.c \
 		auth_client.c \
+		autoupgrade_client.c \
 		backup_phase1_client.c \
 		backup_phase2_client.c \
 		backup_phase1_server.c \
