--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -68,3 +68,12 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #notify_failure_arg = From: burp
 #notify_failure_arg = Subject: backup failed:
 
+# The server can run scripts on each connection after authentication and before
+# disconnecting.
+#server_script_pre = /some-server-pre-script
+#server_script_pre_arg = arg1
+#server_script_pre_arg = arg2
+#server_script_post = /some-server-post-script
+#server_script_post_arg = arg1
+#server_script_post_arg = arg2
+#server_script_post_run_on_fail=0
