--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -70,10 +70,10 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 
 # The server can run scripts on each connection after authentication and before
 # disconnecting.
-#server_script_pre = etc/burp/ssl_extra_checks_script
-#server_script_pre_arg = etc/burp/crl
-#server_script_pre_arg = etc/burp/burp-server.conf
-#server_script_pre_arg = etc/burp/server-pre-script.local
+#server_script_pre = /etc/burp/ssl_extra_checks_script
+#server_script_pre_arg = /etc/burp/crl
+#server_script_pre_arg = /etc/burp/burp-server.conf
+#server_script_pre_arg = /etc/burp/server-pre-script.local
 #server_script_post = 
 #server_script_post_arg = 
 #server_script_post_arg = 
