--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -10,6 +10,9 @@ pidfile = /var/run/burp/client.pid
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
 # network_timeout = 7200
+# The directory to which autoupgrade files will be downloaded.
+# To never autoupgrade, leave it commented out.
+# autoupgrade_dir=/etc/burp/autoupgrade/client
 
 include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
