--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -12,6 +12,7 @@ pidfile = /var/run/burp/client.pid
 # network_timeout = 7200
 # The directory to which autoupgrade files will be downloaded.
 # To never autoupgrade, leave it commented out.
+# WARNING: this feature is only partially complete in 1.2.7, do not use it yet.
 # autoupgrade_dir=/etc/burp/autoupgrade/client
 
 include = /home
