--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -13,6 +13,8 @@ pidfile = /var/run/burp/client.pid
 # The directory to which autoupgrade files will be downloaded.
 # To never autoupgrade, leave it commented out.
 # autoupgrade_dir=/etc/burp/autoupgrade/client
+# OS path component for the autoupgrade directory on the server.
+# autoupgrade_os=test_os
 
 include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
