--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -15,6 +15,10 @@ umask = 0022
 # Network timeout defaults to 7200 seconds (2 hours).
 # network_timeout = 7200
 
+# Location of autoupgrade files to serve to clients. Leave it commented out
+# to not autoupgrade clients.
+# autoupgrade_dir = /etc/burp/autoupgrade/server
+
 # You can have as many 'keep' lines as you like.
 # Setting 7, 4, 6 will keep 7 daily backups, 4 weekly, and 6 four-weekly
 # backups.
