--- a/src/win32/installer32/Makefile
+++ b/src/win32/installer32/Makefile
@@ -52,7 +52,8 @@ clean:
 	$(CMD_ECHO)-rm -f $(INSTALL_EXE)
 	$(CMD_ECHO)-rm -rf release32
 	$(CMD_ECHO)-rm -rf winburp.nsi
-	$(CMD_ECHO)-rm -rf ConfigPageBP.ini
+	$(CMD_ECHO)-rm -rf ConfigPage1.ini
+	$(CMD_ECHO)-rm -rf ConfigPage2.ini
 	$(CMD_ECHO)-rm -rf DumpLog.nsh
 
 #
@@ -90,7 +91,8 @@ $(foreach file,$(DOC_FILES),$(eval $(call Copy_Docs,$(file))))
 
 winburp.nsi:
 	cp ../installer/winburp.nsi .
-	cp ../installer/ConfigPageBP.ini .
+	cp ../installer/ConfigPage1.ini .
+	cp ../installer/ConfigPage2.ini .
 	cp ../installer/DumpLog.nsh .
 
 $(INSTALL_EXE): winburp.nsi $(addprefix release32/,$(BURP_BINARIES) $(DEPKGS_BINARIES) $(MINGW_BINARIES) $(SSL_FILES))
