Add 'exclude_fs =' option for Linux so that you can skip partitions types (for example, tmpfs) without generating warnings.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -23,7 +23,11 @@ include = /home
 #exclude = /home/graham/testdir/libr
 # Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
 #exclude_ext = vdi
-#exclude_ext = vmdk
+#exclude_ext = vmd
+# Exclude various temporary file systems. You may want to add devfs, devpts,
+# proc, ramfs, etc.
+exclude_fs = sysfs
+exclude_fs = tmpfs
 # Exclude files based on size. Defaults are 0, which means no limit.
 #min_file_size = 0 Mb
 #max_file_size = 0 Mb
