If recovery method 'resume' is set, but the includes/excludes change, switch to 'use', then start a new backup.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,6 +45,8 @@ SVRSRCS =	acl.c \
 		find.c \
 		forkchild.c \
 		handy.c \
+		incexc_recv_server.c \
+		incexc_send_client.c \
 		list_client.c \
 		list_server.c \
 		lock.c \
